--- a/7-BaseDeDatos/package.json
+++ b/7-BaseDeDatos/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "ejs",
+  "name": "7-basededatos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.0.2",
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.5",
-    "moment": "^2.29.3",
-    "socket.io": "^4.4.1"
+    "knex": "^2.0.0",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.8"
   }
 }
