--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -12,7 +12,10 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "knex": "^2.0.0",
     "moment": "^2.29.3",
-    "socket.io": "^4.4.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.8"
   }
 }
