--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -12,9 +12,12 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "faker": "^5.5.3",
     "knex": "^2.0.0",
     "moment": "^2.29.3",
+    "mongoose": "^6.3.8",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.8"
   }
