--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.3",
     "faker": "^5.5.3",
     "knex": "^2.0.0",
     "moment": "^2.29.3",
