--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.6",
@@ -21,6 +23,8 @@
     "mongoose": "^6.3.8",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.8"
   }
