--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -18,10 +18,13 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
+    "fork": "^1.3.1",
     "knex": "^2.0.0",
+    "minimist": "^1.2.6",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.19",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
