--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node benchmark.js",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.9.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
@@ -22,6 +23,7 @@
     "faker": "^5.5.3",
     "fork": "^1.3.1",
     "knex": "^2.0.0",
+    "log4js": "^6.6.1",
     "minimist": "^1.2.6",
     "moment": "^2.29.3",
     "mongoose": "^6.3.8",
@@ -31,6 +33,10 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.4.1",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "^5.0.8",
+    "stream": "^0.0.2"
+  },
+  "devDependencies": {
+    "@types/faker": "^6.6.9"
   }
 }
